fix z-index :overlay, modal,drawer

--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -16,6 +16,7 @@
     --sidebar-width: 300px;
     --sidebar-width-collapsed: 80px;
     --modal-z-index: 1000;
+    --overlay-z-index: 100;
     --overlay-color: rgba(0 0 0 / 60%);
     --red-light: rgb(249 101 101);
     --red-dark: rgb(222 8 8);
